# yoyoloader_vita

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: compilation.yml  restarter.yml
keymaps/: #gbjam Outbound.ini  (Probably) Endless space adventure.ini  0.0.ini  1004 - fish in the sea.ini  10_gnomes_in_new_york.ini  2019towerofgod18.ini  7drl.ini  8bitMikoSimpleThing.ini  AOAOCB_final_fest2.ini  AeonNightmares.ini  AgainstTheLegions.ini  Ajayu 1.ini  Andy's Apple Farm.ini  AndyDrawing.ini  Apocalypse Online.ini  Arcade Microgames.ini  ArcticClash.ini  Automofilia46.ini  Awaremon - GMS Community Jam 39.ini  BE Witches 20 08 2020.ini  BaconMayDie.ini  Banana Game one.ini  BehindEveryGreatOne_LD42.ini  Beowulf.ini  Billy and his Jetpack.ini  Blunko.ini  BnB.ini  BoboGooey_v2.ini  Boss Jam Platformer.ini  Box Clever.ini  BrokenAether.ini  Bubble People GMS2.ini  BundleKitt.ini  CANDYVANIA.ini  CP2_2004_2.ini  Caos Trigger - Golem.ini  CappuchinoSpoontforceDeluxeVI_GirlOfTheBoilingFury.ini  Cats and Dogs.ini  CaveBlast.ini  CaveSwingV2.ini  (+333 more)
launcher/: Makefile  main.c
launcher/builder/: Instructions.txt  build.bat
libc_bridge/: nids.yml
livearea/: template.xml
loader/: audio_player.c  config.h  ctype_patch.c  dialog.c  dialog.h  gamepad.c  glsl2cg.c  libc_bridge.h  main.c  main.h  net.c  openal_patch.c  profiler.c  qoi_decoder.c  sbrk.c  so_util.c  so_util.h  trophies.c  videoplayer_patch.c
loader/shaders/: movie_f.h  movie_v.h
selector/: dialogs.cpp  main.cpp  player.cpp  strings.cpp  strings.h
translations/: Chinese_Simplified.ini  Chinese_Traditional.ini  Czech.ini  English.ini  German.ini  Italian.ini  Japanese.ini  Portuguese_BR.ini  Russian.ini  Ryukyuan.ini  Spanish.ini  Ukrainian.ini
